# todo_list_tauri

./: .gitmodules  README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.node.json
src/: App.svelte  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/firebase-rs/: Cargo.toml
src-tauri/firebase-rs/src/: errors.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  helpers.rs  macos.rs  main.rs
src-tauri/src/commands/: board_commands.rs  group_commands.rs  mod.rs  task_commands.rs  user_commands.rs
src-tauri/src/database/: board.rs  color.rs  crypto.rs  group.rs  id.rs  mod.rs  task.rs  user.rs
src-tauri/src/firebase_interface/: mod.rs  refresh_token.rs  sign_in_with_oauth.rs
src-tauri/src/oauth/: command.rs  github_client.rs  login_signin_commands.rs  mod.rs  oauth.rs  oauth_helper.rs  sign_in_with_oauth.rs
src-tauri/src/secure_storage/: refresh_token.rs
src/backend/: index.ts  window.ts
src/database/: index.ts  store.ts
src/helpers/: index.ts
src/lib/: AddGroup.svelte  AddTask.svelte  AppIcon.svelte  BoardBlock.svelte  ColorButton.svelte  ColorPicker.svelte  EditActions.svelte  EditingTag.svelte  GithubLogin.svelte  GithubUser.svelte  GroupBlock.svelte  GroupTitle.svelte  LoginScreen.svelte  SaveSpinner.svelte  TaskBody.svelte  TaskCard.svelte  TextAreaInput.svelte  UseAutoHeight.ts
src/lib/actions/: UseOnEnter.ts
src/lib/drag/: DragContext.ts  Dragula.svelte  Dragula.ts  UseContainerAction.ts  UseDragHandle.ts  UseDropData.ts  UseImmovableItem.ts  UseMovableItem.ts
