[package]
name = "todo_list"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "macos-private-api"] }
chrono = "0.4.22"
maplit = "1.0.2"
uuid = "1.1.2"
titlecase = "2.2.1"
strum_macros = "0.24.3"
strum = "0.24.1"
window-vibrancy = "0.3.0"
tauri-plugin-window-state = "0.1.0"
cocoa = "0.24.0"
objc = "0.2.7"
dotenv = "0.15.0"
oauth2 = "4.2.3"
url = "2.3.1"
futures = "0.3.24"
hyper = { version = "0.14.20", features = ["server"] }
tower-service = "0.3.2"
serde_urlencoded = "0.7.1"
anyhow = "1.0.65"
thiserror = "1.0.37"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = "1.21.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
